idfed mapping is an array of key/value
